fixed navbar drop down on small screen:

--- a/src/components/DropDown/DropDown.module.css
+++ b/src/components/DropDown/DropDown.module.css
@@ -48,3 +48,9 @@ li:hover .container *+.dropDown,
     padding:0;
     margin-left:-5px;
 }
+
+@media screen and (max-width: 1000px) {
+    .dropDown {
+        display:none;
+    }
+}
